--- a/02-hiv-aids.Rmd
+++ b/02-hiv-aids.Rmd
@@ -180,24 +180,24 @@ The most significant difficulties faced are:
 Collection of data is costly and time consuming.
 As a result, limited direct data might be available for the particular time, location, and sub-population of interest.
 For example, in many countries the last conducted household survey is several years out of date.
-4. **Missing data**
+4. **Missing data**:
 The sampling frame of a survey may not correspond to the target population.
 For example, many KPs are difficult to reach, and may be omitted from sampling frames.
 Individuals included on the sampling frame may choose not to respond.
 All surveys are subject to sampling error, as only a subset of the target population are sampled.
 Each of these issues can be characterised as being problems of missing data.
 I characterise missing data as referring to the shortfalls of any given study, and data sparsity as referring to limited availability of studies. 
-3. **Response and measurement biases**
+3. **Response and measurement biases**:
 Individuals may be hesitant to disclose their HIV status, or report higher risk behaviours, due to social desirability bias or a fear of discrimination or stigma.
 When available, biomarker data can be used to overcome under-reporting, but still may be subject to measurement errors.
-4. **Denominators and demography**
+4. **Denominators and demography**:
 Many indicators are rates or proportions, which rely on estimates of the population at risk in the denominator.
 Accurately estimating population denominators is itself a challenging task [@tatem2017worldpop].
 Taking a ratio of uncertain quantities amplifies uncertainty, but is rarely properly accounted for.
-5. **Inconsistent data collection and reporting**
+5. **Inconsistent data collection and reporting**:
 The types of data that are collected might vary across space and time.
 Reporting protocols or definitions can also change.
-6. **Reliance on epidemiological parameters**
+6. **Reliance on epidemiological parameters**:
 Indicators rely on estimates of epidemiological parameters such as rates of disease progression.
 These parameters are typically obtained from cohort studies and may not generalise to the setting of interest.
 Further, they are typically applied coarsely, and without proper accounting for uncertainty.
